{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 61,
  "lineage": "016d240e-2a0e-2902-148c-9c70bc9cfb5b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "mum-default-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:323533494701:vpc/vpc-0cca2e67",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-6abf8702",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-4503c02e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cca2e67",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-7424fe1f",
            "owner_id": "323533494701"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "fawaz-asg-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:323533494701:loadbalancer/app/fawaz-asg-lb/110338a2a93a1b9d",
            "arn_suffix": "app/fawaz-asg-lb/110338a2a93a1b9d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "fawaz-asg-lb-640810478.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:323533494701:loadbalancer/app/fawaz-asg-lb/110338a2a93a1b9d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fawaz-asg-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e3c28f667eac3aa3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-427e732a"
              },
              {
                "subnet_id": "subnet-96e89bda"
              },
              {
                "subnet_id": "subnet-b16ce9ca"
              }
            ],
            "subnets": [
              "subnet-427e732a",
              "subnet-96e89bda",
              "subnet-b16ce9ca"
            ],
            "vpc_id": "vpc-0cca2e67",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.tf-upnr-fawaz-asg-lb",
            "data.aws_subnets.mum-default-subnets",
            "data.aws_vpc.mum-default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "fawaz-asg-lb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:323533494701:listener/app/fawaz-asg-lb/110338a2a93a1b9d/1f546a76d51f0536",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:323533494701:listener/app/fawaz-asg-lb/110338a2a93a1b9d/1f546a76d51f0536",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:323533494701:loadbalancer/app/fawaz-asg-lb/110338a2a93a1b9d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.fawaz-asg-lb",
            "aws_security_group.tf-upnr-fawaz-asg-lb",
            "data.aws_subnets.mum-default-subnets",
            "data.aws_vpc.mum-default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lb-asg-listner-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:323533494701:targetgroup/asg-target/5d4dd3ea1784f832",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:323533494701:listener-rule/app/fawaz-asg-lb/110338a2a93a1b9d/1f546a76d51f0536/42d7f527e93d3b51",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:323533494701:listener-rule/app/fawaz-asg-lb/110338a2a93a1b9d/1f546a76d51f0536/42d7f527e93d3b51",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:323533494701:listener/app/fawaz-asg-lb/110338a2a93a1b9d/1f546a76d51f0536",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.fawaz-asg-lb",
            "aws_lb_listener.fawaz-asg-lb-listner",
            "aws_lb_target_group.asg-target",
            "aws_security_group.tf-upnr-fawaz-asg-lb",
            "data.aws_subnets.mum-default-subnets",
            "data.aws_vpc.mum-default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:323533494701:targetgroup/asg-target/5d4dd3ea1784f832",
            "arn_suffix": "targetgroup/asg-target/5d4dd3ea1784f832",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:323533494701:targetgroup/asg-target/5d4dd3ea1784f832",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "asg-target",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cca2e67"
          },
          "dependencies": [
            "data.aws_vpc.mum-default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-upnr-fawaz-asg-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:323533494701:security-group/sg-0e3c28f667eac3aa3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3c28f667eac3aa3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-upnr-fawaz-asg-lb",
            "name_prefix": "",
            "owner_id": "323533494701",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cca2e67"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-upnr-fawaz-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:323533494701:security-group/sg-0d2e8552164beccd0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d2e8552164beccd0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "49.36.222.156/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf-upnr-fawaz-sg",
            "name_prefix": "",
            "owner_id": "323533494701",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cca2e67"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}